Create folder for each episode
add option to create new folder for each episode

--- a/Emby.AutoOrganize/Configuration/autoorganizetv.html
+++ b/Emby.AutoOrganize/Configuration/autoorganizetv.html
@@ -82,7 +82,7 @@
                     </div>
                 </div>
 
-                <div is="emby-collapse" title="Episode file pattern">
+                <div is="emby-collapse" title="Episode file pattern EP">
                     <div class="collapseContent">
                         <br />
                         <div class="inputContainer">
@@ -178,6 +178,13 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <br />
+                        <div>
+                            <label class="checkboxContainer">
+                                <input type="checkbox" is="emby-checkbox" id="chkMoveEachEpisodeToAFolder" />
+                                <span>Move each episode to sigle folder</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
 
